--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,7 @@
-# SPDX-FileCopyrightText: 2021 Melissa LeBlanc-Williams for Adafruit Industries
+# SPDX-FileCopyrightText: 2023 Jose D. Montoya
 #
 # SPDX-License-Identifier: Unlicense
 
-# Required
 version: 2
 
 build:
